fix(@findify/bundle,@findify/react-components): change alignment of items in horizontal mode

--- a/packages/react-components/src/components/Facet/styles.css
+++ b/packages/react-components/src/components/Facet/styles.css
@@ -7,8 +7,9 @@ $horizontal-background: white;
     margin-bottom: 0;
   }
   &.horizontal{
+    border-top: none;
     background: $horizontal-background;
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     position: relative;
   }
 }
